--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
     </section>
     <div class="rocket-bg">
         <div class="bg" style="
-            background: url('/images/pslv-bg.jpg') #314584; 
+            background: url('./images/pslv-bg.jpg') #314584; 
             background-blend-mode: soft-light; background-size: cover;
             background-size: cov;
             background-repeat: no-repeat;
